--- a/web/src/App.css
+++ b/web/src/App.css
@@ -28,6 +28,16 @@
   color: #61dafb;
 }
 
+.search {
+  display: flex;
+  text-align: center;
+}
+
+.search-input {
+   margin: 0 auto;
+
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
